--- a/.htaccess
+++ b/.htaccess
@@ -1,5 +1,7 @@
 <IfModule mod_rewrite.c>
-RewriteEngine On
-ErrorDocument 404 https://www.sorantechnicalcollege.tk
+    RewriteEngine on
+    Options +FollowSymlinks -MultiViews
+
+    RewriteRule ^$ /index.html [R,L]
 
 </IfModule>
